cmake_minimum_required(VERSION 3.17)
project(untitled C)

set(CMAKE_C_STANDARD 99)

add_executable(test main.c)
add_executable(custom_malloc custom_malloc.c)
add_executable(test_malloc test_malloc.c)
add_executable(err1 err1.c)
add_executable(bst_avl bst_avl.c)
add_executable(binary_tree_from_the_hood taken_rbtree.c)
add_executable(myhashtable myhashtable.c)
add_executable(tester tester.c)
add_executable(dijkstra dijkstra.c)
add_executable(other_hash other_hash.c)
add_executable(dsa3 dsa3.c)
add_executable(dsa3tester dsa3tester.c)
add_executable(sort_main sort_main.c)
add_executable(ADT_stack ADT_stack.c)
add_executable(ADT_queue ADT_queue.c)
add_executable(DS_bst DS_bst.c)
add_executable(DS_hashtable DS_hashtable.c)
add_executable(ALG_rabin_karp ALG_rabin_karp.c)
add_executable(SORT_counting SORT_counting.c)
add_executable(SRCH_binary SRCH_binary.c)
add_executable(SRCH_interpolation SRCH_interpolation.c)
add_executable(GRPH_prim GRPH_prim.c)
add_executable(GRPH_djikstra GRPH_djikstra.c)
add_executable(GRPH_kruskal GRPH_kruskal.c)
add_executable(SORT_radix SORT_radix.c)
add_executable(DS_heap DS_heap.c)